src/objects/AppActivity__c.object
<CustomObject>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>App Activity</relationshipLabel>
        <relationshipName>App_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>App Activity</relationshipLabel>
        <relationshipName>App_Activity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <formula>IF(ISBLANK(Property__c), HYPERLINK(&quot;/&quot; &amp; Broker__r.Id, Broker__r.Name, &quot;_self&quot;), HYPERLINK(&quot;/&quot; &amp; Property__r.Id, Property__r.Name, &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>App Activity</relationshipLabel>
        <relationshipName>App_Activity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>App_Activity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>App Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Activity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>